# Proyecto_Igus_Rebel

./: README.md
install/: local_setup.sh  setup.sh
install/hello_moveit/share/hello_moveit/: package.sh
install/irc_ros_description/share/irc_ros_description/: package.sh
install/moveit/share/moveit/: package.sh
install/moveit2_pose_target/share/moveit2_pose_target/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/moveit_common/share/moveit_common/: local_setup.sh  package.sh
install/moveit_configs_utils/share/moveit_configs_utils/: package.sh
install/moveit_resources_prbt_support/share/moveit_resources_prbt_support/: local_setup.sh  package.sh
install/moveit_task_constructor_msgs/share/moveit_task_constructor_msgs/: local_setup.sh  package.sh
install/my_package/lib/my_package/: nodo_IO  nodo_cinematica  (+4 more)
src/hello_moveit/src/: hello_moveit.cpp
src/moveit2_pose_target/: CMakeLists.txt  package.xml
src/moveit2_pose_target/src/: move_to_pose_node.cpp
src/my_package/: package.xml  setup.py
src/my_package/my_package/: nodo_IO.py  nodo_cinematica.py  nodo_cinematica_inv.py  nodo_mando.py  nodo_mensaje_vel.py  nodo_pose_moveit.py
src/robot/: .setup_assistant  CMakeLists.txt  package.xml
src/robot/config/: igus_rebel_6dof.srdf  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/robot/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
(+6 files in other folders)
